--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,46 @@
+# Dependencies
 node_modules/
+.pnp/
+.pnp.js
 
 # Next.js build output
 .next/
+out/
+build/
+dist/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# IDE / Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Testing
+coverage/
+.nyc_output/
+
+# Prisma
+prisma/*.db
+prisma/*.db-journal
+
+# Misc
+*.log
+*.tsbuildinfo
+next-env.d.ts
